<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentSaisie">

    <EditText
        android:id="@+id/editText_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/pr_nom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/adresse_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/num_ro_de_t_l_phone"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cbSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport" />

        <CheckBox
            android:id="@+id/cbMusique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musique" />
        <CheckBox
            android:id="@+id/cbLecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture" />
        <CheckBox
            android:id="@+id/cbInformatique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informatique" />

    </LinearLayout>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:text="@string/soumettre" />

    <Button
        android:id="@+id/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:text="@string/t_l_charger" />
</LinearLayout>